[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Ending/ending_b.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EndingUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Ending/ending_a.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Winkle18.tres" type="DynamicFont" id=5]

[node name="EndingUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="RichTextLabel" parent="."]
margin_left = 265.0
margin_top = 480.0
margin_right = 676.0
margin_bottom = 556.0
rect_pivot_offset = Vector2( 307.176, 64.3193 )
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="RichTextLabel" parent="."]
margin_left = 271.0
margin_top = 348.0
margin_right = 678.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 307.176, 64.3193 )
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player3" type="RichTextLabel" parent="."]
margin_left = 275.0
margin_top = 83.0
margin_right = 680.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( 307.176, 64.3193 )
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player4" type="RichTextLabel" parent="."]
margin_left = 273.0
margin_top = 216.0
margin_right = 680.0
margin_bottom = 295.0
rect_pivot_offset = Vector2( 307.176, 64.3193 )
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Society" type="RichTextLabel" parent="."]
visible = false
margin_left = 318.0
margin_top = 118.0
margin_right = 734.0
margin_bottom = 333.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sustainability" type="RichTextLabel" parent="."]
visible = false
margin_left = 322.0
margin_top = 117.0
margin_right = 728.0
margin_bottom = 335.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlayer" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 721.0
margin_top = 542.0
margin_right = 822.0
margin_bottom = 587.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEnd" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 639.0
margin_top = 334.0
margin_right = 747.0
margin_bottom = 378.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBackground" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 525, 300 )
scale = Vector2( 0.311969, 0.293996 )
texture = ExtResource( 1 )

[node name="AllBackground" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 525, 300 )
scale = Vector2( 0.340246, 0.293558 )
texture = ExtResource( 4 )
[connection signal="pressed" from="ButtonPlayer" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonEnd" to="." method="_on_ButtonEnd_pressed"]
